--- a/src/App.css
+++ b/src/App.css
@@ -99,6 +99,9 @@ h2 {
   cursor: pointer;
   font-size: 16px;
 }
+.btn-spacing {
+    margin-left: 10px;
+}
 .category-line {
   display: flex;
   align-items: center;
