--- a/src/App.css
+++ b/src/App.css
@@ -109,8 +109,8 @@ h2 {
   transition: background-color 0.3s ease;
   cursor: pointer;
   font-size: 16px;
-  margin-left: 30px
-  margin-right: 30px
+  margin-left: 30px;
+  margin-right: 30px;
 }
 .category-line {
   display: flex;
