--- a/src/App.css
+++ b/src/App.css
@@ -112,6 +112,7 @@ h2 {
   font-size: 16px;
   margin-left: 30px;
   margin-right: 30px;
+  white-space: nowrap;
 }
 .category-line {
   display: flex;
