--- a/src/App.css
+++ b/src/App.css
@@ -208,6 +208,14 @@ h2 {
   width: 50%;
   margin-left: 55.6%;
 }
+.small-text3 {
+  font-size: 12px;
+  color: #999;
+  text-align: left;
+  margin-top: 10px;
+  width: 50%;
+  margin-left: 58%;
+}
 .disclaimer {
   font-size: 12px;
   color: #999;
