--- a/src/App.css
+++ b/src/App.css
@@ -74,26 +74,6 @@ h2 {
   cursor: pointer;
   font-size: 16px;
 }
-.chatgpt-button-group {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  max-width: 600px;
-  margin: 0 auto;
-  flex-wrap: wrap;
-}
-.chatgpt-button {
-  display: inline-block;
-  background-color: #007BFF;
-  color: white;
-  padding: 10px 20px;
-  border-radius: 5px;
-  text-decoration: none;
-  transition: background-color 0.3s ease;
-  cursor: pointer;
-  font-size: 16px;
-  margin: 5px 15px; /* 增加水平边距 */
-}
 .category-line {
   display: flex;
   align-items: center;
@@ -206,15 +186,7 @@ h2 {
   text-align: left;
   margin-top: 10px;
   width: 50%;
-  margin-left: 60.75%;
-}
-.small-text3 {
-  font-size: 12px;
-  color: #999;
-  text-align: left;
-  margin-top: 10px;
-  width: 50%;
-  margin-left: 59.78%;
+  margin-left: 55.6%;
 }
 .disclaimer {
   font-size: 12px;
@@ -228,5 +200,11 @@ h2 {
   }
   .project-description-mobile {
     display: block;
+  }
+  .small-text {
+    margin-left: 61.68%;
+  }
+  .small-text2 {
+    margin-left: 59.08%;
   }
 }
